samples/_failures_safe/1761142049_aee63a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d80d28fe.c: In function ‘main’:
./samples/SAFE/__tmp_d80d28fe.c:148:9: error: expected declaration or statement at end of input
  148 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_d80d28fe.c:148:9: error: expected declaration or statement at end of input
